--- a/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/Design_dashboardATM.xaml
+++ b/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/Design_dashboardATM.xaml
@@ -19,6 +19,7 @@
                         <RowDefinition Height="25" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
+                    
                     <Menu VerticalAlignment="Center"
                           Background="#FFE6E7E8">
                         <MenuItem Header="File" />
@@ -42,7 +43,7 @@
                                     <RowDefinition Height="*" />
                                     <RowDefinition Height="*" />
                                 </Grid.RowDefinitions>
-                                <Grid Height="60">
+                                <Grid Height="60" Margin="5,5,5,10">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition />
                                         <ColumnDefinition />
@@ -90,7 +91,10 @@
 
                                     <Grid Grid.Row="1"
                                           Background="#FF58595B" Margin="0,1,0,0">
-
+                                        <ListBox x:Name="searchListbox"
+                                                 Background="{x:Null}"
+                                                 BorderBrush="{x:Null}"
+                                                 Foreground="White" />
                                     </Grid>
                                 </Grid>
 
