--- a/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/App.xaml
+++ b/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/App.xaml
@@ -8,6 +8,7 @@
                 <ResourceDictionary Source="/Design_dashboardATM_AIFile;component/ResourceDictionaries/ButtonResources.xaml" />
                 <ResourceDictionary Source="/Design_dashboardATM_AIFile;component/ResourceDictionaries/SearchBoxStyleResource.xaml" />
                 <ResourceDictionary Source="/Design_dashboardATM_AIFile;component/ResourceDictionaries/ScrollViewerStyleResource.xaml" />
+                <ResourceDictionary Source="/Design_dashboardATM_AIFile;component/ResourceDictionaries/DataGridStyleResource.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
