--- a/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/ResourceDictionaries/ScrollViewerStyleResource.xaml
+++ b/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/ResourceDictionaries/ScrollViewerStyleResource.xaml
@@ -1,13 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
-    <Color x:Key="BackgroundColor">#FFD0D1D7</Color>
-    <Color x:Key="StandardColor">Gray</Color>
-    <Color x:Key="HoverColor">Gray</Color>
-    <Color x:Key="PressedColor">Gray</Color>
-    <Color x:Key="DialogBackgroundColor">Gray</Color>
-    <Color x:Key="ScollBarBackgroundStart">#FFE8E8EC</Color>
-    <Color x:Key="ScollBarBackgroundEnd">#FFE8E8EC</Color>
+    <Color x:Key="BackgroundColor">#AE2F33</Color>
+    <Color x:Key="StandardColor">#800000</Color>
+    <Color x:Key="HoverColor">#AAC64D45</Color>
+    <Color x:Key="PressedColor">#AA0000</Color>
+    <Color x:Key="DialogBackgroundColor">#FF666666</Color>
+    <Color x:Key="ScollBarBackgroundStart">#77C64D45</Color>
+    <Color x:Key="ScollBarBackgroundEnd">#99C64D45</Color>
     <SolidColorBrush x:Key="StandardBrush"
                      Color="{StaticResource StandardColor}" />
     <SolidColorBrush x:Key="HoverBrush"
@@ -33,7 +34,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RepeatButton}">
                     <Border Name="Border"
-                            Background="{DynamicResource TransparantColor}">
+                            Background="Transparent">
                         <ContentPresenter Name="ContentPresenter"
                                           HorizontalAlignment="Center"
                                           VerticalAlignment="Center"
@@ -46,7 +47,8 @@
         </Setter>
     </Style>
     <!--  Scrollbar Thumbs  -->
-    <Style  TargetType="{x:Type Thumb}">
+    <Style x:Key="ScrollThumbs"
+           TargetType="{x:Type Thumb}">
         <Setter Property="Background"
                 Value="#FFC66526" />
         <Setter Property="Template">
@@ -59,13 +61,13 @@
                                    VerticalAlignment="Stretch"
                                    Fill="Transparent" />
                         <Rectangle Name="Rectangle1"
-                                   Margin="0.4"
+                                   Width="15.5"
                                    Height="Auto"
                                    HorizontalAlignment="Stretch"
                                    VerticalAlignment="Stretch"
-                                   Fill="{TemplateBinding Background}"/>
+                                   Fill="{TemplateBinding Background}" />
                     </Grid>
-                    <!--<ControlTemplate.Triggers>
+                    <ControlTemplate.Triggers>
                         <Trigger Property="Tag"
                                  Value="Horizontal">
                             <Setter TargetName="Rectangle1"
@@ -73,15 +75,15 @@
                                     Value="Auto" />
                             <Setter TargetName="Rectangle1"
                                     Property="Height"
-                                    Value="12" />
+                                    Value="7" />
                         </Trigger>
-                    </ControlTemplate.Triggers>-->
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
     <!--  Scrollbar  -->
-    <Style  TargetType="{x:Type ScrollBar}">
+    <Style TargetType="{x:Type ScrollBar}">
         <Setter Property="Stylus.IsFlicksEnabled"
                 Value="false" />
         <Setter Property="Foreground"
@@ -89,72 +91,50 @@
         <Setter Property="Background"
                 Value="#FF2F2C2E" />
         <Setter Property="Width"
-                Value="2" />
+                Value="10" />
+        <Setter Property="MinWidth"
+                Value="10" />
+        <Setter Property="Margin"
+                Value="0,3,8,3" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ScrollBar}">
                     <Grid x:Name="GridRoot"
-                          Width="{DynamicResource {x:Static SystemParameters.VerticalScrollBarWidth}}"
                           Background="{TemplateBinding Background}">
                         <Grid.RowDefinitions>
                             <RowDefinition MaxHeight="18" />
                             <RowDefinition Height="0.00001*" />
                             <RowDefinition MaxHeight="18" />
                         </Grid.RowDefinitions>
-                        <RepeatButton x:Name="DecreaseRepeat"
-                                      Command="ScrollBar.LineUpCommand"
-                                      Foreground="{StaticResource StandardBrush}"
-                                      Style="{DynamicResource ScrollButtons}">
-                            <Path x:Name="DecreaseArrow"
-                                  HorizontalAlignment="Center"
-                                  VerticalAlignment="Center"
-                                  Data="F1 M 3.5,0L 0,7L 7,7L 3.5,0 Z "
-                                  Fill="{DynamicResource ScrollBarBackColor}" />
-                        </RepeatButton>
+
                         <Track x:Name="PART_Track"
-                               Grid.Row="1"
+                               Grid.RowSpan="3"
+                               ViewportSize="NaN"
                                Focusable="false"
                                IsDirectionReversed="true">
+                           
                             <Track.Thumb>
                                 <Thumb x:Name="Thumb"
+                                       Background="#FFC66526" Height="45"
                                        Style="{DynamicResource ScrollThumbs}" />
                             </Track.Thumb>
                             <Track.IncreaseRepeatButton>
                                 <RepeatButton x:Name="PageUp"
                                               Command="ScrollBar.PageDownCommand"
-                                              Focusable="false"
                                               Opacity="0" />
                             </Track.IncreaseRepeatButton>
                             <Track.DecreaseRepeatButton>
                                 <RepeatButton x:Name="PageDown"
                                               Command="ScrollBar.PageUpCommand"
-                                              Focusable="false"
-                                              Opacity="0" />
+                                              Opacity="0"/>
                             </Track.DecreaseRepeatButton>
                         </Track>
-                        <RepeatButton x:Name="IncreaseRepeat"
-                                      Grid.Row="2"
-                                      Command="ScrollBar.LineDownCommand"
-                                      Foreground="{DynamicResource StandardBrush}"
-                                      Style="{DynamicResource ScrollButtons}">
-                            <Path x:Name="IncreaseArrow"
-                                  HorizontalAlignment="Center"
-                                  VerticalAlignment="Center"
-                                  Data="F1 M 3.5,7L 7,0L 0,0L 3.5,7 Z "
-                                  Fill="{DynamicResource ScrollBarBackColor}" />
-                        </RepeatButton>
+
                     </Grid>
 
                     <ControlTemplate.Triggers>
-
                         <Trigger Property="IsEnabled"
                                  Value="false">
-                            <Setter TargetName="IncreaseArrow"
-                                    Property="Fill"
-                                    Value="{DynamicResource LayerChild1Brush}" />
-                            <Setter TargetName="DecreaseArrow"
-                                    Property="Fill"
-                                    Value="{DynamicResource LayerChild1Brush}" />
                             <Setter TargetName="Thumb"
                                     Property="Visibility"
                                     Value="Collapsed" />
@@ -180,12 +160,6 @@
                             <Setter TargetName="Thumb"
                                     Property="Tag"
                                     Value="Horizontal" />
-                            <Setter TargetName="DecreaseRepeat"
-                                    Property="Command"
-                                    Value="ScrollBar.LineLeftCommand" />
-                            <Setter TargetName="IncreaseRepeat"
-                                    Property="Command"
-                                    Value="ScrollBar.LineRightCommand" />
                             <Setter TargetName="PageDown"
                                     Property="Command"
                                     Value="ScrollBar.PageLeftCommand" />
@@ -198,5 +172,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-
 </ResourceDictionary>
