--- a/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/ResourceDictionaries/SearchBoxStyleResource.xaml
+++ b/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/ResourceDictionaries/SearchBoxStyleResource.xaml
@@ -1,81 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
-                    xmlns:Themes="clr-namespace:Xceed.Wpf.Toolkit.Themes;assembly=Xceed.Wpf.Toolkit">
+                    xmlns:converter="clr-namespace:Design_dashboardATM_AIFile.Classes">
 
-    <Style x:Key="WatermarkTextBoxStyle"
-           TargetType="{x:Type toolkit:WatermarkTextBox}">
-        <Setter Property="Foreground"
-                Value="#FFA7A9AC" />
-        <Setter Property="Background"
-                Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" />
-        <Setter Property="BorderBrush"
-                Value="{DynamicResource {ComponentResourceKey ResourceId=ControlNormalBorderKey, TypeInTargetAssembly={x:Type Themes:ResourceKeys}}}" />
-        <Setter Property="BorderThickness"
-                Value="1" />
-        <Setter Property="Padding"
-                Value="3" />
-        <Setter Property="AllowDrop"
-                Value="True" />
-        <Setter Property="FocusVisualStyle"
-                Value="{x:Null}" />
-        <Setter Property="ScrollViewer.PanningMode"
-                Value="VerticalFirst" />
-        <Setter Property="Stylus.IsFlicksEnabled"
-                Value="False" />
-      
-        <Setter Property="WatermarkTemplate">
-            <Setter.Value>
-                <DataTemplate>
-                    <ContentControl Content="{Binding}"
-                                    Foreground="#FFA7A9AC"
-                                    Focusable="False" />
-                </DataTemplate>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type toolkit:WatermarkTextBox}">
-                    <Grid>
-                        <Border x:Name="Border"
-                                BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                Background="{TemplateBinding Background}"
-                                CornerRadius="0" />
-                        <ScrollViewer x:Name="PART_ContentHost"
-                                      SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                        <ContentPresenter x:Name="PART_WatermarkHost"
-                                          ContentTemplate="{TemplateBinding WatermarkTemplate}"
-                                          Content="{TemplateBinding Watermark}"
-                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          IsHitTestVisible="False"
-                                          Margin="{TemplateBinding Padding}"
-                                          Visibility="Collapsed"
-                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-                    </Grid>
-                    <ControlTemplate.Triggers>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="IsFocused"
-                                           Value="False" />
-                                <Condition Property="Text"
-                                           Value="" />
-                            </MultiTrigger.Conditions>
-                            <Setter Property="Visibility"
-                                    TargetName="PART_WatermarkHost"
-                                    Value="Visible" />
-                        </MultiTrigger>
-
-                        <Trigger Property="IsEnabled"
-                                 Value="False">
-                            <Setter Property="Foreground"
-                                    Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+    <converter:TextInputToVisibilityConverter x:Key="TextInputToVisibilityConverter" />
 
     <Style x:Key="SearchBoxStyle"
            TargetType="{x:Type TextBox}">
@@ -84,7 +11,9 @@
         <Setter Property="BorderBrush"
                 Value="#FFBCBEC0" />
         <Setter Property="Foreground"
-                Value="White" />
+                Value="#FFA7A9AC" />
+        <Setter Property="FontSize"
+                Value="14" />
         <Setter Property="BorderThickness"
                 Value="1" />
         <Setter Property="KeyboardNavigation.TabNavigation"
@@ -112,22 +41,38 @@
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="40" />
                             </Grid.ColumnDefinitions>
-                            <toolkit:WatermarkTextBox Watermark="{TemplateBinding Text}"
-                                                      Margin="2"
-                                                      Background="{x:Null}"
-                                                      Foreground="#FFA7A9AC"
-                                                      BorderBrush="{x:Null}"
-                                                      CaretBrush="#FFA7A9AC"
-                                                      Style="{DynamicResource WatermarkTextBoxStyle}" />
+                            <Grid Background="Transparent" VerticalAlignment="Center" Margin="10,0">
+                                <TextBlock Margin="5,2"
+                                           Text="Calculation Search"
+                                           Foreground="{TemplateBinding Foreground}">
+                                    <TextBlock.Visibility>
+                                        <MultiBinding Converter="{StaticResource TextInputToVisibilityConverter}">
+                                            <Binding ElementName="txtSearch"
+                                                     Path="Text.IsEmpty" />
+                                            <Binding ElementName="txtSearch"
+                                                     Path="IsFocused" />
+                                        </MultiBinding>
+                                    </TextBlock.Visibility>
+                                </TextBlock>
+                                <TextBox x:Name="txtSearch"
+                                         Text="{TemplateBinding Text}"
+                                         Background="Transparent"
+                                         BorderThickness="0"
+                                         Foreground="{TemplateBinding Foreground}"
+                                         CaretBrush="#FFA7A9AC" />
+                            </Grid>
 
                             <Path Data="M0.499,0L0.499,27.5"
                                   Height="23"
                                   Stroke="#FFBCBEC0"
-                                  Width="1" HorizontalAlignment="Right"/>
+                                  Width="1"
+                                  HorizontalAlignment="Right" />
 
                             <Button x:Name="btnSearch"
                                     Content="Search"
-                                    Grid.Column="1" Style="{DynamicResource SearchButtonStyle}" Margin="5,3" />
+                                    Grid.Column="1"
+                                    Style="{DynamicResource SearchButtonStyle}"
+                                    Margin="5,3" />
 
                         </Grid>
                     </Border>
